fix: LatencySlider now scales correctly, with more gap between sliders
- LatencySlider now uses grid layout
- Ubuntu font remote import added
- removed extraneous VerticalSliderContainer component
- minor CSS adjustments, hero gradient and changed button hover effect for 'Read Case Study'

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,7 +3,7 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -40,6 +40,15 @@
   }
 }
 
+@keyframes glow {
+  from {
+    text-shadow: 0 0 2px #fff, 0 0 2px #fff;
+  }
+  to {
+    text-shadow: 0 0 3px #233e87, 0 0 5px #233e87;
+  }
+}
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #243d83;
@@ -68,11 +77,6 @@
 #hero-landing {
   width: 99.5%;
   align-self: center;
-}
-
-* {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .footer {
@@ -137,8 +141,8 @@
 }
 
 .navbar__title {
-  font-size: 1.25rem;
-  font-weight: 900;
+  font-size: 1.30rem;
+  font-weight: 800;
   color: #1d3370;
 }
 
@@ -193,3 +197,49 @@ figcaption {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
+
+.card-shine-effect {
+  --shine-deg: 50deg;
+  position: relative;
+  overflow: hidden;
+  background-color: #6cc930;
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  max-width: 28rem;
+
+  background-repeat: no-repeat;
+  background-position: -100% 0, 0 0;
+
+  background-image: linear-gradient(
+    var(--shine-deg),
+    transparent 20%,
+    transparent 40%,
+    rgb(249, 249, 249, 0.35) 50%,
+    rgb(249, 249, 249, 0.35) 55%,
+    transparent 70%,
+    transparent 100%
+  );
+
+  background-size: 250% 250%, 100% 100%;
+  transition: background-position 0s ease;
+}
+
+.card-shine-effect:hover {
+  background-position: 200% 0, 0 0;
+  transition-duration: 1.4s;
+  color: white;
+  background-color: #7ed348;
+  text-decoration: none;
+}
+
+.glow {
+  font-size: 68px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 0 1px #fff, 0 0 3px #fff;
+  -webkit-animation: glow 2s ease-in-out infinite alternate;
+  -moz-animation: glow 2s ease-in-out infinite alternate;
+  animation: glow 2s ease-in-out infinite alternate;
+}
+
+
+
